# RAG-application

./: pyproject.toml  requirements.txt
data/files/: intro.txt
data/text_files/: content.txt
notebook/: doc.ipynb  notebook.ipynb  rag_module.py
notebook/data/chroma_db/: chroma.sqlite3
