[project]
name = "rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.5.5",
    "ipykernel>=7.2.0",
    "langchain>=1.2.12",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.18",
    "ollama>=0.6.1",
    "pymupdf>=1.27.2",
    "pypdf>=6.8.0",
    "sentence-transformers>=5.3.0",
    "tqdm>=4.67.3",
]
